sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:18: error: not found: value j
      if(!isSmaller(j, j+1)){
                    ^AlgCocktailSort2:18: error: not found: value j
      if(!isSmaller(j, j+1)){
                       ^AlgCocktailSort2:19: error: not found: value j
        swap(j,j+1);
             ^AlgCocktailSort2:19: error: not found: value j
        swap(j,j+1);
               ^